idea-plugin/gen/ru/mipt/acsl/decode/parser/idea/DecodeParser.java
// This is a generated file. Not intended for manual editing.
package ru.mipt.acsl.decode.parser.idea;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static ru.mipt.acsl.decode.parser.psi.DecodeTypes.*;
import static ru.mipt.acsl.decode.parser.idea.DecodeParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class DecodeParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ALIAS_DECL) {
      r = alias_decl(b, 0);
    }
    else if (t == ARRAY_TYPE_APPLICATION) {
      r = array_type_application(b, 0);
    }
    else if (t == COMMAND_ARG) {
      r = command_arg(b, 0);
    }
    else if (t == COMMAND_ARGS) {
      r = command_args(b, 0);
    }
    else if (t == COMMAND_DECL) {
      r = command_decl(b, 0);
    }
    else if (t == COMPONENT_DECL) {
      r = component_decl(b, 0);
    }
    else if (t == COMPONENT_PARAMETERS_DECL) {
      r = component_parameters_decl(b, 0);
    }
    else if (t == ELEMENT_ID) {
      r = element_id(b, 0);
    }
    else if (t == ELEMENT_NAME_RULE) {
      r = element_name_rule(b, 0);
    }
    else if (t == ENUM_TYPE_DECL) {
      r = enum_type_decl(b, 0);
    }
    else if (t == ENUM_TYPE_VALUE) {
      r = enum_type_value(b, 0);
    }
    else if (t == ENUM_TYPE_VALUES) {
      r = enum_type_values(b, 0);
    }
    else if (t == EVENT_MESSAGE) {
      r = event_message(b, 0);
    }
    else if (t == FLOAT_LITERAL) {
      r = float_literal(b, 0);
    }
    else if (t == GENERIC_TYPE_APPLICATION) {
      r = generic_type_application(b, 0);
    }
    else if (t == INFO_STRING) {
      r = info_string(b, 0);
    }
    else if (t == LENGTH_FROM) {
      r = length_from(b, 0);
    }
    else if (t == LENGTH_TO) {
      r = length_to(b, 0);
    }
    else if (t == LITERAL) {
      r = literal(b, 0);
    }
    else if (t == MESSAGE_DECL) {
      r = message_decl(b, 0);
    }
    else if (t == MESSAGE_PARAMETERS_DECL) {
      r = message_parameters_decl(b, 0);
    }
    else if (t == NAMESPACE_DECL) {
      r = namespace_decl(b, 0);
    }
    else if (t == NATIVE_TYPE_KIND) {
      r = native_type_kind(b, 0);
    }
    else if (t == PARAMETER_DECL) {
      r = parameter_decl(b, 0);
    }
    else if (t == PARAMETER_ELEMENT) {
      r = parameter_element(b, 0);
    }
    else if (t == PRIMITIVE_TYPE_APPLICATION) {
      r = primitive_type_application(b, 0);
    }
    else if (t == PRIMITIVE_TYPE_KIND) {
      r = primitive_type_kind(b, 0);
    }
    else if (t == STATUS_MESSAGE) {
      r = status_message(b, 0);
    }
    else if (t == STRING_VALUE) {
      r = string_value(b, 0);
    }
    else if (t == STRUCT_TYPE_DECL) {
      r = struct_type_decl(b, 0);
    }
    else if (t == SUBCOMPONENT_DECL) {
      r = subcomponent_decl(b, 0);
    }
    else if (t == TYPE_APPLICATION) {
      r = type_application(b, 0);
    }
    else if (t == TYPE_DECL) {
      r = type_decl(b, 0);
    }
    else if (t == TYPE_DECL_BODY) {
      r = type_decl_body(b, 0);
    }
    else if (t == TYPE_UNIT_APPLICATION) {
      r = type_unit_application(b, 0);
    }
    else if (t == UNIT) {
      r = unit(b, 0);
    }
    else if (t == UNIT_DECL) {
      r = unit_decl(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return decodeFile(b, l + 1);
  }

  /* ********************************************************** */
  // info_string? ALIAS element_id type_application
  public static boolean alias_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alias_decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<alias decl>");
    r = alias_decl_0(b, l + 1);
    r = r && consumeToken(b, ALIAS);
    r = r && element_id(b, l + 1);
    r = r && type_application(b, l + 1);
    exit_section_(b, l, m, ALIAS_DECL, r, false, null);
    return r;
  }

  // info_string?
  private static boolean alias_decl_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alias_decl_0")) return false;
    info_string(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // LEFT_BRACKET type_application (COMMA length_from (DOTS (length_to | STAR))?)? RIGHT_BRACKET
  public static boolean array_type_application(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_application")) return false;
    if (!nextTokenIs(b, LEFT_BRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_BRACKET);
    r = r && type_application(b, l + 1);
    r = r && array_type_application_2(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACKET);
    exit_section_(b, m, ARRAY_TYPE_APPLICATION, r);
    return r;
  }

  // (COMMA length_from (DOTS (length_to | STAR))?)?
  private static boolean array_type_application_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_application_2")) return false;
    array_type_application_2_0(b, l + 1);
    return true;
  }

  // COMMA length_from (DOTS (length_to | STAR))?
  private static boolean array_type_application_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_application_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && length_from(b, l + 1);
    r = r && array_type_application_2_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (DOTS (length_to | STAR))?
  private static boolean array_type_application_2_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_application_2_0_2")) return false;
    array_type_application_2_0_2_0(b, l + 1);
    return true;
  }

  // DOTS (length_to | STAR)
  private static boolean array_type_application_2_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_application_2_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOTS);
    r = r && array_type_application_2_0_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // length_to | STAR
  private static boolean array_type_application_2_0_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_application_2_0_2_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = length_to(b, l + 1);
    if (!r) r = consumeToken(b, STAR);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // info_string? type_unit_application element_name_rule
  public static boolean command_arg(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_arg")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<command arg>");
    r = command_arg_0(b, l + 1);
    r = r && type_unit_application(b, l + 1);
    r = r && element_name_rule(b, l + 1);
    exit_section_(b, l, m, COMMAND_ARG, r, false, null);
    return r;
  }

  // info_string?
  private static boolean command_arg_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_arg_0")) return false;
    info_string(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // command_arg (COMMA command_arg)* COMMA?
  public static boolean command_args(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_args")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<command args>");
    r = command_arg(b, l + 1);
    r = r && command_args_1(b, l + 1);
    r = r && command_args_2(b, l + 1);
    exit_section_(b, l, m, COMMAND_ARGS, r, false, null);
    return r;
  }

  // (COMMA command_arg)*
  private static boolean command_args_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_args_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!command_args_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "command_args_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMMA command_arg
  private static boolean command_args_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_args_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && command_arg(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean command_args_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_args_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // info_string? COMMAND element_name_rule (COLON NON_NEGATIVE_NUMBER)? LEFT_PAREN command_args? RIGHT_PAREN (ARROW type_unit_application)?
  public static boolean command_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<command decl>");
    r = command_decl_0(b, l + 1);
    r = r && consumeToken(b, COMMAND);
    r = r && element_name_rule(b, l + 1);
    r = r && command_decl_3(b, l + 1);
    r = r && consumeToken(b, LEFT_PAREN);
    r = r && command_decl_5(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    r = r && command_decl_7(b, l + 1);
    exit_section_(b, l, m, COMMAND_DECL, r, false, null);
    return r;
  }

  // info_string?
  private static boolean command_decl_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_decl_0")) return false;
    info_string(b, l + 1);
    return true;
  }

  // (COLON NON_NEGATIVE_NUMBER)?
  private static boolean command_decl_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_decl_3")) return false;
    command_decl_3_0(b, l + 1);
    return true;
  }

  // COLON NON_NEGATIVE_NUMBER
  private static boolean command_decl_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_decl_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, COLON, NON_NEGATIVE_NUMBER);
    exit_section_(b, m, null, r);
    return r;
  }

  // command_args?
  private static boolean command_decl_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_decl_5")) return false;
    command_args(b, l + 1);
    return true;
  }

  // (ARROW type_unit_application)?
  private static boolean command_decl_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_decl_7")) return false;
    command_decl_7_0(b, l + 1);
    return true;
  }

  // ARROW type_unit_application
  private static boolean command_decl_7_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_decl_7_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ARROW);
    r = r && type_unit_application(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // info_string? COMPONENT element_name_rule (COLON NON_NEGATIVE_NUMBER)? (WITH subcomponent_decl (COMMA subcomponent_decl)*)?
  //     LEFT_BRACE component_parameters_decl? (command_decl|message_decl)* RIGHT_BRACE
  public static boolean component_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<component decl>");
    r = component_decl_0(b, l + 1);
    r = r && consumeToken(b, COMPONENT);
    r = r && element_name_rule(b, l + 1);
    r = r && component_decl_3(b, l + 1);
    r = r && component_decl_4(b, l + 1);
    r = r && consumeToken(b, LEFT_BRACE);
    r = r && component_decl_6(b, l + 1);
    r = r && component_decl_7(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACE);
    exit_section_(b, l, m, COMPONENT_DECL, r, false, null);
    return r;
  }

  // info_string?
  private static boolean component_decl_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_0")) return false;
    info_string(b, l + 1);
    return true;
  }

  // (COLON NON_NEGATIVE_NUMBER)?
  private static boolean component_decl_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_3")) return false;
    component_decl_3_0(b, l + 1);
    return true;
  }

  // COLON NON_NEGATIVE_NUMBER
  private static boolean component_decl_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, COLON, NON_NEGATIVE_NUMBER);
    exit_section_(b, m, null, r);
    return r;
  }

  // (WITH subcomponent_decl (COMMA subcomponent_decl)*)?
  private static boolean component_decl_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_4")) return false;
    component_decl_4_0(b, l + 1);
    return true;
  }

  // WITH subcomponent_decl (COMMA subcomponent_decl)*
  private static boolean component_decl_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, WITH);
    r = r && subcomponent_decl(b, l + 1);
    r = r && component_decl_4_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA subcomponent_decl)*
  private static boolean component_decl_4_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_4_0_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!component_decl_4_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "component_decl_4_0_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMMA subcomponent_decl
  private static boolean component_decl_4_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_4_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && subcomponent_decl(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // component_parameters_decl?
  private static boolean component_decl_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_6")) return false;
    component_parameters_decl(b, l + 1);
    return true;
  }

  // (command_decl|message_decl)*
  private static boolean component_decl_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_7")) return false;
    int c = current_position_(b);
    while (true) {
      if (!component_decl_7_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "component_decl_7", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // command_decl|message_decl
  private static boolean component_decl_7_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_7_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = command_decl(b, l + 1);
    if (!r) r = message_decl(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // PARAMETERS LEFT_PAREN command_args RIGHT_PAREN
  public static boolean component_parameters_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_parameters_decl")) return false;
    if (!nextTokenIs(b, PARAMETERS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, PARAMETERS, LEFT_PAREN);
    r = r && command_args(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, COMPONENT_PARAMETERS_DECL, r);
    return r;
  }

  /* ********************************************************** */
  // namespace_decl (component_decl | unit_decl | type_decl | alias_decl)*
  static boolean decodeFile(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decodeFile")) return false;
    if (!nextTokenIs(b, NAMESPACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = namespace_decl(b, l + 1);
    r = r && decodeFile_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (component_decl | unit_decl | type_decl | alias_decl)*
  private static boolean decodeFile_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decodeFile_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!decodeFile_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "decodeFile_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // component_decl | unit_decl | type_decl | alias_decl
  private static boolean decodeFile_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decodeFile_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = component_decl(b, l + 1);
    if (!r) r = unit_decl(b, l + 1);
    if (!r) r = type_decl(b, l + 1);
    if (!r) r = alias_decl(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // element_name_rule (DOT element_name_rule)*
  public static boolean element_id(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element_id")) return false;
    if (!nextTokenIs(b, "<element id>", ELEMENT_NAME_TOKEN, ESCAPED_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<element id>");
    r = element_name_rule(b, l + 1);
    r = r && element_id_1(b, l + 1);
    exit_section_(b, l, m, ELEMENT_ID, r, false, null);
    return r;
  }

  // (DOT element_name_rule)*
  private static boolean element_id_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element_id_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!element_id_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "element_id_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // DOT element_name_rule
  private static boolean element_id_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element_id_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOT);
    r = r && element_name_rule(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ELEMENT_NAME_TOKEN | ESCAPED_NAME
  public static boolean element_name_rule(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element_name_rule")) return false;
    if (!nextTokenIs(b, "<element name rule>", ELEMENT_NAME_TOKEN, ESCAPED_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<element name rule>");
    r = consumeToken(b, ELEMENT_NAME_TOKEN);
    if (!r) r = consumeToken(b, ESCAPED_NAME);
    exit_section_(b, l, m, ELEMENT_NAME_RULE, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // info_string? ENUM (primitive_type_kind | native_type_kind) LEFT_PAREN enum_type_values RIGHT_PAREN
  public static boolean enum_type_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_type_decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<enum type decl>");
    r = enum_type_decl_0(b, l + 1);
    r = r && consumeToken(b, ENUM);
    r = r && enum_type_decl_2(b, l + 1);
    r = r && consumeToken(b, LEFT_PAREN);
    r = r && enum_type_values(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, l, m, ENUM_TYPE_DECL, r, false, null);
    return r;
  }

  // info_string?
  private static boolean enum_type_decl_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_type_decl_0")) return false;
    info_string(b, l + 1);
    return true;
  }

  // primitive_type_kind | native_type_kind
  private static boolean enum_type_decl_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_type_decl_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = primitive_type_kind(b, l + 1);
    if (!r) r = native_type_kind(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // info_string? element_name_rule EQ_SIGN literal
  public static boolean enum_type_value(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_type_value")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<enum type value>");
    r = enum_type_value_0(b, l + 1);
    r = r && element_name_rule(b, l + 1);
    r = r && consumeToken(b, EQ_SIGN);
    r = r && literal(b, l + 1);
    exit_section_(b, l, m, ENUM_TYPE_VALUE, r, false, null);
    return r;
  }

  // info_string?
  private static boolean enum_type_value_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_type_value_0")) return false;
    info_string(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // enum_type_value (COMMA enum_type_value)* COMMA?
  public static boolean enum_type_values(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_type_values")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<enum type values>");
    r = enum_type_value(b, l + 1);
    r = r && enum_type_values_1(b, l + 1);
    r = r && enum_type_values_2(b, l + 1);
    exit_section_(b, l, m, ENUM_TYPE_VALUES, r, false, null);
    return r;
  }

  // (COMMA enum_type_value)*
  private static boolean enum_type_values_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_type_values_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!enum_type_values_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "enum_type_values_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMMA enum_type_value
  private static boolean enum_type_values_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_type_values_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && enum_type_value(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean enum_type_values_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_type_values_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // info_string? EVENT element_name_rule (COLON NON_NEGATIVE_NUMBER)? message_parameters_decl
  public static boolean event_message(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "event_message")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<event message>");
    r = event_message_0(b, l + 1);
    r = r && consumeToken(b, EVENT);
    r = r && element_name_rule(b, l + 1);
    r = r && event_message_3(b, l + 1);
    r = r && message_parameters_decl(b, l + 1);
    exit_section_(b, l, m, EVENT_MESSAGE, r, false, null);
    return r;
  }

  // info_string?
  private static boolean event_message_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "event_message_0")) return false;
    info_string(b, l + 1);
    return true;
  }

  // (COLON NON_NEGATIVE_NUMBER)?
  private static boolean event_message_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "event_message_3")) return false;
    event_message_3_0(b, l + 1);
    return true;
  }

  // COLON NON_NEGATIVE_NUMBER
  private static boolean event_message_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "event_message_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, COLON, NON_NEGATIVE_NUMBER);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (PLUS | MINUS)? (NON_NEGATIVE_NUMBER DOT NON_NEGATIVE_NUMBER? | DOT NON_NEGATIVE_NUMBER) (("e" | "E") (PLUS | MINUS)? NON_NEGATIVE_NUMBER)?
  public static boolean float_literal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "float_literal")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<float literal>");
    r = float_literal_0(b, l + 1);
    r = r && float_literal_1(b, l + 1);
    r = r && float_literal_2(b, l + 1);
    exit_section_(b, l, m, FLOAT_LITERAL, r, false, null);
    return r;
  }
